--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,7 @@ inhibit_all_warnings!
 
 target 'DKImagePickerControllerDemo' do
 
-  pod 'DKImagePickerController', :path => '../'
+  pod 'DKImagePickerController'
 
   # Pods for DKImagePickerControllerDemo
 
